# Kinetic_Monte_Carlo_Code

./: README.md  test.config  test.sh
doc/: manual.lyx  nonschmid.lyx  technical_notes.lyx
doc/cross_kink_stress/: CrossKinkStressSimulation.cpp  plot.gp
doc/kink_pair_energy/: kink_pair_energy.gp
doc/kink_pair_separation/: Fe_data.txt  kink_pair_separation.gp
doc/kink_pair_stress/: KinkPairStressSimulation.cpp  plot.gp  plot_kink_stress_from_external_stress.gp
doc/kink_stress/: KinkStressSimulation.cpp  kink_stress.pptx  plot.gp  stress_plot.eps  stress_plot_case3.eps
src/: CMakeLists.txt  Settings.h  StandardIncludes.h
src/context/: Context.cpp  Context.h
src/dislocations/: Cleanup.cpp  CrossKinks.cpp  Dislocations.cpp  Dislocations.h  ElasticInteraction.cpp  KinkCreation.cpp  KinkMotion.cpp  Output.cpp
src/main/: Main.cpp
src/pointdefects/: Output.cpp  PointDefects.cpp  PointDefects.h
src/pointres/: Output.cpp  PointRes.cpp  PointRes.h
src/simulation/: Initialization.cpp  KinkPairNucleation.cpp  MonteCarlo.cpp  Output.cpp  Simulation.h
src/util/: Debug.cpp  Debug.h
src/util/linalg/: LinAlg.cpp  Matrix3.cpp  Matrix3.h  Point3.h  Tensor.cpp  Tensor.h  Vector3.h  VectorN.h
